--- a/public/index.html
+++ b/public/index.html
@@ -568,6 +568,7 @@ async function processFiles() {
             '-i', 'input.mp4',
             '-filter:v', filterComplex,//Cambiar cropFilter
             '-c:v', 'libx264',
+            '-preset', 'ultrafast', 
             '-profile:v', profile,
             '-level', level,
             '-b:v', `${bitrate}k`,
@@ -702,3 +703,4 @@ vpartsInput.addEventListener('input', () => {
 
 </body>
 </html>
+
