--- a/public/index.html
+++ b/public/index.html
@@ -568,7 +568,7 @@ async function processFiles() {
             '-i', 'input.mp4',
             '-filter:v', filterComplex,//Cambiar cropFilter
             '-c:v', 'libx264',
-            '-preset', 'veryfast', 
+            '-preset', 'faster', 
             '-profile:v', profile,
             '-level', level,
             '-b:v', `${bitrate}k`,
@@ -703,5 +703,6 @@ vpartsInput.addEventListener('input', () => {
 
 </body>
 </html>
+
 
 
