--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 <div id="dropZone">Ó directamente arrastra y suelta tus archivos de video aquí para agregarlos</div>
 
 <label>Bitrate (kbps):
-  <input type="number" id="bitrate" value="2000" min="100" max="10000" />
+  <input type="number" id="bitrate" value="2500" min="100" max="10000" />
 </label>
 
 
@@ -568,7 +568,7 @@ async function processFiles() {
             '-i', 'input.mp4',
             '-filter:v', filterComplex,//Cambiar cropFilter
             '-c:v', 'libx264',
-            '-preset', 'veryfast', 
+            '-preset', 'faster', 
             '-profile:v', profile,
             '-level', level,
             '-b:v', `${bitrate}k`,
@@ -703,6 +703,7 @@ vpartsInput.addEventListener('input', () => {
 
 </body>
 </html>
+
 
 
 
