--- a/public/index.html
+++ b/public/index.html
@@ -118,6 +118,37 @@
 </label>
 <!-- Fin ajustes de resolucion -->
 
+  <!-- Opciones de rotación -->
+  <fieldset style="margin-top:10px; border:1px solid #ccc; padding:10px; border-radius:5px;">
+    <legend>Rotar video (opcional)</legend>
+    <label><input type="radio" name="rotateOption" id="rotateLeft" value="left" /> Girar 90° a la izquierda</label>
+    <label><input type="radio" name="rotateOption" id="rotateRight" value="right" /> Girar 90° a la derecha</label>
+    <label><input type="radio" name="rotateOption" id="rotate180" value="180" /> Girar 180°</label>
+  </fieldset>
+  <script>
+  // Permitir deseleccionar los radios (solo uno activo o ninguno)
+  document.querySelectorAll('input[name="rotateOption"]').forEach(radio => {
+    radio.addEventListener('mousedown', function(e) {
+      if (this.checked) {
+        this.wasChecked = true;
+      } else {
+        this.wasChecked = false;
+      }
+    });
+    radio.addEventListener('click', function(e) {
+      if (this.wasChecked) {
+        this.checked = false;
+        this.wasChecked = false;
+        e.preventDefault();
+      }
+      // Desmarcar los otros
+      document.querySelectorAll('input[name="rotateOption"]').forEach(r => {
+        if (r !== this) r.checked = false;
+      });
+    });
+  });
+  </script>
+
 
 <!-- SECCIÓN MEDIAINFO: Mover arriba de Preview a Exportar -->
 <section id="mediainfo-section">
@@ -561,11 +592,26 @@ async function processFiles() {
           
           const scaleFilter = `scale=${outputWidth}:${outputHeight}`;
           const cropFilter = `crop=${cropWidth}:${currentCropHeight}:${offsetX}:${offsetY}`;
-          
-          // Cortar y redimensionar
-          const filterComplex = `${cropFilter},${scaleFilter}`;
 
-          //---Fin---//
+          // Filtro de rotación
+          let rotateFilter = '';
+          const rotateLeft = document.getElementById('rotateLeft').checked;
+          const rotateRight = document.getElementById('rotateRight').checked;
+          const rotate180 = document.getElementById('rotate180').checked;
+          if (rotateLeft) {
+            rotateFilter = 'transpose=1';
+          } else if (rotateRight) {
+            rotateFilter = 'transpose=2';
+          } else if (rotate180) {
+            rotateFilter = 'transpose=2,transpose=2';
+          }
+
+          // Construir filtro complejo: crop -> rotación (si aplica) -> scale
+          let filterComplex = cropFilter;
+          if (rotateFilter) {
+            filterComplex += ',' + rotateFilter;
+          }
+          filterComplex += ',' + scaleFilter;
 
           const profile = profileSelect.value;
           const level = document.getElementById('h264Level').value;
